--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,18 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Калькулятор Lora</title>
+  <title>LoRa калькулятор</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://lora.commandus.com:8050">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-app-background darkMode" class="mat-typography" >
+<!--class="mat-app-background darkMode" -->
+<body class="mat-typography" >
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
