--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>LoRaWAN калькулятор</title>
+    <title i18n="@@lorawan-calculator-online">LoRaWAN calculator online</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -14,6 +14,6 @@
   <!--class="mat-app-background darkMode" -->
   <body class="mat-typography" >
     <app-root></app-root>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <noscript i18n="@@enable-javascript">Please enable JavaScript to continue using this application</noscript>
   </body>
 </html>
